NOT COMPILABLE interim state for the redesign StringList -> TokenList